--- a/action.yml
+++ b/action.yml
@@ -6,13 +6,21 @@ branding:
   color: "blue"
 
 inputs:
+  organization:
+    description: The organization to use for the action
+    required: true
   github-token:
     description: The GitHub token used to create an authenticated client
     default: ${{ github.token }}
     required: false
-  organization:
-    description: The organization to use for the action
-    required: true
+  remove:
+    description: Whether to remove inactive users
+    default: false
+    required: false
+  inactive-days:
+    description: The number of days to consider a user inactive
+    default: 90
+    required: false
 
 runs:
   using: "node16"
