--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@actions/artifact": "^1.1.1",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "moment": "^2.29.4"
