--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -1,4 +1,4 @@
-name: Build / Lint / Test
+name: CI
 
 on:
   pull_request:
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
-    name: Lint/Build/Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
