--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
   "license": "MIT",
   "dependencies": {
     "@actions/artifact": "^1.1.2",
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
+    "@octokit/types": "^12.0.0",
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.6.0",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "@vercel/ncc": "^0.38.0",
-    "eslint": "^8.49.0",
-    "jest": "^29.6.4",
+    "eslint": "^8.50.0",
+    "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
