--- a/.github/workflows/usage-notify.yml
+++ b/.github/workflows/usage-notify.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: ./
         with:
           github-token: ${{ secrets.TOKEN }}
-          organization: "octodemo"
+          organization: 'octodemo'
           inactive-days: 30
           csv: true
   notify-inactive:
