--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
     "@octokit/types": "^12.0.0",
+    "csv-parse": "^5.5.3",
     "moment": "^2.29.4"
   },
   "devDependencies": {
