chore: Update inactive-days to 3 and remove to false in usage.yaml workflow

--- a/.github/workflows/usage.yaml
+++ b/.github/workflows/usage.yaml
@@ -14,5 +14,6 @@ jobs:
         with:
           github-token: ${{ secrets.TOKEN }}
           organization: 'myorg'
-          inactive-days: 30
+          inactive-days: 3
+          remove: false
           csv: true
