chore: Update inactive-days and remove to false in usage.yaml workflow

--- a/.github/workflows/usage.yaml
+++ b/.github/workflows/usage.yaml
@@ -1,5 +1,8 @@
 name: Cleanup Copilot Licenses
 on:
+  push:
+    paths:
+      - '.github/workflows/usage.yaml'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
