chore: Update organization variable in usage.yaml workflow

--- a/.github/workflows/usage.yaml
+++ b/.github/workflows/usage.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: ./
         with:
           github-token: ${{ secrets.TOKEN }}
-          organization: 'myorg'
+          organization: ${{ vars.ORG }}
           inactive-days: 3
           remove: false
           csv: true
