--- a/.github/workflows/usage-notify.yml
+++ b/.github/workflows/usage-notify.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./
+        id: copilot
         with:
           github-token: ${{ secrets.TOKEN }}
           organization: 'myorg'
