--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
+    "src/deploy.ts",
     "node_modules",
     "__tests__",
     "__mocks__",
