--- a/.github/workflows/usage.yaml
+++ b/.github/workflows/usage.yaml
@@ -1,11 +1,9 @@
 name: Cleanup Copilot Licenses
 on:
   push:
-    paths:
-      - '.github/workflows/usage.yaml'
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+  #   - cron: '0 0 * * *'
 
 jobs:
   copilot:
