--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,10 @@ inputs:
     description: Whether to output a CSV of the inactive users
     default: false
     required: false
+  artifactName:
+    description: The name of the artifact to upload
+    default: inactive-copilot-seats.csv
+    required: false
   # deploy-users:
   #   description: Whether to deploy users from a CSV file
   #   default: false
