--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@actions/artifact": "2.2.2",
+    "@actions/artifact": "^2.3.1",
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@octokit/request-error": "^6.1.7",
@@ -32,15 +32,16 @@
     "moment": "^2.30.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.5",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
+    "@types/node": "^22.13.10",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
